# action-cargo-source

./: Cargo.toml  Dockerfile  README.md  action.yml  versions.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
examples/hello/: Cargo.toml  lib.rs
