[package]
name = "hello"
version = "0.1.0"
authors = ["Fredrik Simonsson <fredrik@nodle.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.2", default-features = false, features = ["derive"], optional = true }
alloy-primitives = { version = "0.7.5", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
